Fix issues found by findbugs